# pico-weather-station

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml  server.py
pico/: main.py  pyproject.toml
