[project]
name = "pico_weather_server"
version = "0.1.0"
description = "Host server for Pico weather station"
dependencies = [
    "pyserial==3.5",
    "python-dotenv==1.2.2"
]
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pyright==1.1.410",
    "typing_extensions==4.15.0"
]

[tool.pyright]
include = ["."]
exclude = ["pico"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
pythonPlatform = "Linux"
